--- a/paths.yaml
+++ b/paths.yaml
@@ -1,5 +1,5 @@
 
-OSCD_DATASET_ROOT: '/storage/shafner/oscd_dataset'
+OSCD_ROOT: '/storage/shafner/oscd_dataset'
 SENTINEL1_DATA: '/home/shafner/DS_UNet/data'
-PREPROCESSED_DATASET: '/storage/shafner/oscd_dataset_preprocessed'
+PREPROCESSED_ROOT: '/storage/shafner/oscd_dataset_preprocessed'
 
