--- a/configs/debug.yaml
+++ b/configs/debug.yaml
@@ -1,12 +1,3 @@
-_BASE_: "base.yaml"
+_BASE_: "fusion_dualstream_7.yaml"
 
 DEBUG: True
-
-MODEL:
-  TYPE: 'unet'
-  IN_CHANNELS: 28
-
-DATASET:
-  MODE: 'fusion'
-  SENTINEL1_BANDS: ['VV']
-  SENTINEL2_BANDS: ['B01', 'B02', 'B03', 'B04', 'B05', 'B06', 'B07', 'B08', 'B8A', 'B09', 'B10', 'B11', 'B12']
